--- a/package.json
+++ b/package.json
@@ -1,38 +1,56 @@
 {
-  "name": "settlemyre-messenger",
-  "module": "index.ts",
-  "type": "module",
-  "devDependencies": {
-    "@types/bun": "latest",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  },
-  "dependencies": {
-    "@trpc/client": "^11.0.0-rc.561",
-    "@trpc/server": "^11.0.0-rc.561",
-    "@types/react": "^18.3.11",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "concurrently": "^9.0.1",
-    "lucide-react": "^0.447.0",
-    "next": "^14.2.14",
-    "next-themes": "^0.3.0",
-    "prettier": "^3.3.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "sass": "^1.79.4",
-    "tailwind-merge": "^2.5.3",
-    "tailwindcss-animate": "^1.0.7",
-    "trpc-bun-adapter": "^1.1.2",
-    "zod": "^3.23.8"
-  },
-  "scripts": {
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  }
+	"name": "create-l3-app",
+	"module": "index.ts",
+	"type": "module",
+	"devDependencies": {
+		"@types/bun": "latest",
+		"autoprefixer": "^10.4.20",
+		"postcss": "^8.4.47",
+		"tailwindcss": "^3.4.13"
+	},
+	"peerDependencies": {
+		"typescript": "^5.0.0"
+	},
+	"dependencies": {
+		"@radix-ui/react-dialog": "^1.1.2",
+		"@radix-ui/react-dropdown-menu": "^2.1.2",
+		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-navigation-menu": "^1.2.1",
+		"@radix-ui/react-popover": "^1.1.2",
+		"@radix-ui/react-scroll-area": "^1.2.0",
+		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-switch": "^1.1.1",
+		"@trpc/client": "^11.0.0-rc.561",
+		"@trpc/server": "^11.0.0-rc.561",
+		"@types/react": "^18.3.11",
+		"axios": "^1.7.7",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
+		"cmdk": "1.0.0",
+		"concurrently": "^9.0.1",
+		"embla-carousel-react": "^8.3.0",
+		"lucide-react": "^0.447.0",
+		"mssql": "^11.0.1",
+		"next": "^14.2.14",
+		"next-client-cookies": "^1.1.1",
+		"next-themes": "^0.3.0",
+		"prettier": "^3.3.3",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"sass": "^1.79.4",
+		"simple-json-db": "^2.0.0",
+		"tailwind-merge": "^2.5.3",
+		"tailwindcss-animate": "^1.0.7",
+		"tedious": "^18.6.1",
+		"trpc-bun-adapter": "^1.1.2",
+		"twilio": "^5.3.3",
+		"vaul": "^1.1.0",
+		"zod": "^3.23.8"
+	},
+	"scripts": {
+		"dev": "concurrently --kill-others \"next dev -p 5170\" \"bun run --watch server/index.ts\"",
+		"build": "next build",
+		"start": "concurrently --kill-others \"next start -p 5170\" \"bun run server/index.ts\"",
+		"lint": "next lint"
+	}
 }
