--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"typescript": "^5.0.0"
 	},
 	"dependencies": {
+		"@hono/trpc-server": "^0.3.2",
 		"@radix-ui/react-dialog": "^1.1.2",
 		"@radix-ui/react-dropdown-menu": "^2.1.2",
 		"@radix-ui/react-label": "^2.1.0",
@@ -29,11 +30,13 @@
 		"cmdk": "1.0.0",
 		"concurrently": "^9.0.1",
 		"embla-carousel-react": "^8.3.0",
+		"hono": "^4.6.5",
 		"lucide-react": "^0.447.0",
 		"mssql": "^11.0.1",
 		"next": "^14.2.14",
 		"next-client-cookies": "^1.1.1",
 		"next-themes": "^0.3.0",
+		"openai": "^4.68.0",
 		"prettier": "^3.3.3",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
