--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"build": "next build",
 		"start": "concurrently --kill-others \"next start -p 5170\" \"bun run server/index.ts\"",
 		"lint": "next lint",
-		"build:docker": "docker compose up --build"
+		"build:docker": "docker compose up --build",
+		"build:db": "bun run server/database.ts"
 	}
 }
